syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/vakhrushevk/chat-server-service/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateChatRequest) returns (CreateChatResponse);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteChatRequest) returns (google.protobuf.Empty);
}

message CreateChatRequest {
  repeated string usernames = 1;
}

message CreateChatResponse {
  int64 id = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message DeleteChatRequest {
  int64 id = 1;
}